[tool.poetry]
name = "repl-nix-ancientlinkupvote"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
flask-login = "^0.6.3"
python-dotenv = "^1.0.1"
faker = "^30.1.0"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
